# onehealth-risk

./: .gitignore  CITATION.cff  CONTRIBUTING.md  FINAL_README.md  LICENSE  README.md  README_source.md  build_summary.md  data_dictionary_template.md  pyproject.toml  requirements.txt
configs/: semarang.yaml  synthetic.yaml
data/demo/: synthetic_cases.csv  synthetic_kecamatan_lookup.csv  synthetic_population.csv  synthetic_weather.csv
docs/: architecture.md
onehealth_risk/: __init__.py  cli.py  config.py  data.py  demo.py  evaluate.py  features.py  models.py  predict.py  reports.py  security.py  workflow.py
paper/: abstract.md  methods.md  security_privacy.md  software_statement.md
scripts/: run_all.ps1
src/: build_project.py  scrape_lekminkes.py
tests/: test_cli_smoke.py
